<resources>
    <string name="app_name">PraliamentAppProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="member_of_parliament_application">Member of Parliament Application</string>
    <string name="get_started">Get Started</string>
    <string name="twitter">Twitter</string>
    <string name="constituency">Constituency</string>
    <string name="hetekaid">Hetekaid</string>
    <string name="seat_no">Seat No.</string>
    <string name="is_minister">Minister</string>
    <string name="party">Party</string>
    <string name="write_a_note">Write a note</string>
    <string name="birth_date">Birth date : </string>
    <string name="write_a_note_for_mp">Write a note for MP</string>
    <string name="save_button">Save</string>
</resources>