<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MemberDetailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:cardElevation="16sp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_marginBottom="10sp"
            app:cardBackgroundColor="#8691D1"
            app:cardCornerRadius="20sp">

            <androidx.cardview.widget.CardView
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_gravity="right|center"
                android:layout_marginBottom="10sp"
                app:cardCornerRadius="140sp">

                <ImageView
                    android:id="@+id/imageOfMpDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nameOfMPDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10sp"
                android:textSize="23sp"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dobOfMPText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60sp"
                    android:layout_marginStart="5sp"
                    android:text="@string/birth_date"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/dobOfMP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="310sp"
            android:layout_height="110sp"
            android:layout_gravity="center"
            android:layout_marginTop="-65sp"
            app:cardCornerRadius="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55sp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/likeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:layout_marginStart="10sp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/dislikeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:layout_marginStart="170sp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55sp"
                    android:weightSum="3">

                    <ImageButton
                        android:id="@+id/thumbsUp"
                        android:layout_width="1sp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:background="@drawable/ic_baseline_thumb_up_24"
                        android:layout_weight="1"/>


                    <Button
                        android:id="@+id/writeANote"
                        android:layout_width="wrap_content"
                        android:layout_height="45sp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/cardview_shadow_start_color"
                        android:text="@string/write_a_note"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <ImageButton
                        android:id="@+id/thumbsDown"
                        android:layout_width="1sp"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:background="@drawable/ic_baseline_thumb_down_24"
                        android:layout_weight="1" />
                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:text="@string/party"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/nameOfPartyDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:text="@string/is_minister"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/isMinisterValueDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:text="@string/seat_no"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/seatNoValueDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:text="@string/hetekaid"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/hetekaIdValueDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:text="@string/constituency"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/constituencyValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:text="@string/twitter"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/twitterAccountValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</layout>